Apply final changes and correct alignment to blocks and texts

--- a/src/Home/less/edit.less
+++ b/src/Home/less/edit.less
@@ -43,9 +43,13 @@
   margin: 0px 0px 16px;
 }
 #Content11_1 .title-wrapper > .l57m7r6nrnf-editor_css {
+  margin-top: 16px;
 }
 #Footer1_0 .footer1 > .ant-row > .l57m8fdv4gq-editor_css {
   color: rgb(49, 70, 89);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #Footer1_0 .ant-col > div > .l57m9ohvgkr-editor_css {
 }
@@ -123,7 +127,7 @@
   margin: 0 0 8px;
 }
 #Content9_0 .home-page > .title-wrapper > .l65xcxbh5s-editor_css {
-  margin: 0px 0 8px;
+  margin-top: 16px;
 }
 #Teams0_0 .l65tz9aaqad-editor_css {
   background-clip: padding-box;
@@ -243,21 +247,24 @@
 }
 #Footer1_0 .ant-col > div > .l57m8ef96b-editor_css {
   color: #d9d9d9;
-  margin: 0px 0px 8px;
+  margin-bottom: 12px;
+  text-align: center;
 }
 #Footer1_0 .ant-col > div > .l662w6x64t-editor_css {
   color: #d9d9d9;
-  margin: 0px 0px 8px;
 }
 #Footer1_0 .ant-col > div > .l663krc44cm-editor_css {
   color: #d9d9d9;
+  text-align: center;
 }
 #Footer1_0 .ant-col > div > .l663f86vzr-editor_css {
   color: #d9d9d9;
+  display: flex;
+  flex-direction: column;
 }
 #Footer1_0 .ant-col > div > .l663mkvd54-editor_css {
   color: #d9d9d9;
-  text-align: justify;
+  text-align: center;
   margin: 0px 0px 8px;
 }
 #Teams0_0
@@ -292,5 +299,5 @@
 #Footer1_0 .ant-row > .ant-col > .l6qa25dhoeo-editor_css {
 }
 #Footer1_0 .ant-col > .l6qa25dhoeo-editor_css > .l663mkvd54-editor_css {
-  text-align: left;
+  text-align: center;
 }
